# goit_web_08

./: LICENSE  README.md
common/: config.ini
hw8/: .gitignore  config.ini  consumer.py  models.py  producer.py  pyproject.toml  requirements.txt
hw8/hw_first_part/: find.py  seeds.py
hw8/hw_firts_part/: find.py  models.py  seeds.py
