[project]
name = "hw8"
version = "0.1.0"
description = ""
authors = [
    {name = "Matviy",email = "krugovcovmatvey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mongoengine (>=0.29.1,<0.30.0)",
    "redis (>=5.2.1,<6.0.0)",
    "redis-lru (>=0.1.2,<0.2.0)",
    "pika (>=1.3.2,<2.0.0)",
    "faker (>=37.1.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
